Fix alignment issue on smaller screens

--- a/projects/plugins/jetpack/_inc/client/at-a-glance/style.scss
+++ b/projects/plugins/jetpack/_inc/client/at-a-glance/style.scss
@@ -719,6 +719,14 @@ a.jp-dash-item__manage-in-wpcom,
 }
 
 .jp-dash-item.jp-connection-type {
+	.jp-dash-item__content {
+		display: block;
+	}
+
+	.jp-connection-settings__text {
+		flex-grow: 1;
+	}
+
 	.jp-dash-item__content,
 	.jp-connection-settings__text {
 		align-self: center;
